2014-02-20  Per Bothner  <per@bothner.com>

	* configure.ac: Separately configure bin, and move code that needs
	a C compiler there, requried only enable_kawa_frontend is set.
	Remove GCJ support.
	* Makefile.am: Likewise.
	* Make-rules: Remove GCJ support.

2014-02-18  Jamison Hope  <jrh@theptrgroup.com>

	* build.xml (slib-scm-classes): Add srfi60.scm.

2014-02-06  Per Bothner  <per@bothner.com>

	* build.xml (commonlisp-scm-classes): Make sure to compile
	primitives.lisp.

	* Makefile.am (COMMENT_IN, COMMENT_OUT): Remove unused macros.

2014-01-06  Per Bothner  <per@bothner.com>

	* Makefile.am (dist-kawa-@VERSION@.jar): Configure for Java 7.
	* configure.in: Default JAVA_SOURCE to 7, rather than 6.

	* missing: Get newer version from upstream.

	Change checked-in versions to the JAVA7 version.

2014-01-05  Per Bothner  <per@bothner.com>

	Fold the Makefile.am of gnu/xml, gnu/kawa/xml, gnu/ecmascript,
	gnu/kawa/swingviews, gnu/kawa/swtviews, gnu/kawa/ant, and
	gnu/kawa/sax into gnu/Makefile.am.

	Fold the Makefile.am of gnu/kawa/util, gnu/kawa/reflect,
	gnu/kawa/functions, gnu/kawa/lispexpr, and gnu/kawa/models
	into new gnu/Makefile.am
	* Makefile.am (SUBDIRS): Update accordingly.
	* configure.ac (AC_CONFIG_FILES): Likewise.

2013-12-22  Per Bothner  <per@bothner.com>

	* build.xml (lib-scm-classes): Add missing classes.

2013-10-04  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.14.1.
	* build.xml (version.release): Likewise.

2013-09-28  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.14.
	* build.xml (version.release): Likewise.

2013-09-23  Per Bothner  <per@bothner.com>

	* Makefile.am (kawa-doc-$(VERSION).tar.gz): Update,
	since kawa-tour.texi is now gone.

2013-09-16  Per Bothner  <per@bothner.com>

	* Makefile.am: Add Java8 support.
	(select-java8): New rule.
	* condigure.ac: Add Java8 support.
	* build.xml: Likewise.

2013-06-16  Per Bothner  <per@bothner.com>
